--- a/Main/style.css
+++ b/Main/style.css
@@ -91,6 +91,7 @@ body {
   background: rgba(255, 254, 247, 1);
 }
 .body__container {
+  width: 100%;
   max-width: 1440px;
   display: flex;
   flex-wrap: wrap;
@@ -104,17 +105,25 @@ body {
   justify-content: center;
 }
 .header__body {
-  max-width: 1360px;
+  width: 1360px;
   height: 80px;
   background: rgba(75, 97, 241, 1);
   border-radius: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin: 40px 0 0 0;
+  padding: 20px;
+}
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .header__logo {
-  margin: 20px 0 20px 20px;
+}
+.header__logo-adaptive {
+  display: none;
 }
 .header__nav {
   width: 705px;
@@ -164,7 +173,6 @@ body {
   text-transform: uppercase;
   color: #fffef7;
   border-radius: 34px;
-  margin-right: 20px;
   transition: 0.3s;
   background-color: transparent;
 }
@@ -198,6 +206,40 @@ body {
   letter-spacing: 0.03em;
   color: #fffef7;
   margin-right: 47px;
+  margin-left: 20px;
+}
+.open {
+  display: flex !important;
+}
+.burger {
+  display: none;
+  position: relative;
+  z-index: 50;
+  align-items: center;
+  justify-content: flex-end;
+  width: 40px;
+  height: 19px;
+}
+.burger span {
+  height: 2.5px;
+  width: 32.5px;
+  transform: scale(1);
+  background: rgba(255, 254, 247, 1);
+}
+.burger::before,
+.burger::after {
+  content: "";
+  position: absolute;
+  height: 2.5px;
+  width: 32.5px;
+  background: rgba(255, 254, 247, 1);
+  transition: all 0.3s ease 0s;
+}
+.burger::before {
+  top: 0;
+}
+.burger::after {
+  bottom: 0;
 }
 .main {
   width: 100%;
@@ -228,6 +270,7 @@ body {
   margin-top: 40px;
 }
 .block-1__paragraph {
+  width: 881px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -364,7 +407,6 @@ body {
   letter-spacing: -0.05em;
   text-transform: uppercase;
   color: #2e2e2e;
-  margin-bottom: 32px;
 }
 .block-3__content {
   width: 100%;
@@ -476,6 +518,7 @@ body {
   align-items: flex-start;
   justify-content: space-between;
   flex-direction: column;
+  margin: 120px 0;
 }
 .video__title {
   font-family: "Lubalin Graph";
@@ -486,7 +529,7 @@ body {
   letter-spacing: -0.05em;
   text-transform: uppercase;
   color: #2e2e2e;
-  margin: 120px 0 40px 0;
+  margin-bottom: 40px;
 }
 .video {
   width: 1360px;
@@ -500,7 +543,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 120px;
+  margin-bottom: 120px;
 }
 .project__content {
   width: 100%;
@@ -713,7 +756,7 @@ body {
   align-items: flex-start;
   justify-content: center;
   gap: 50px;
-  margin: 120px 0;
+  margin: 0 0 120px 0;
 }
 .social__title {
   font-family: "Lubalin Graph";
@@ -869,24 +912,30 @@ body {
   color: #2e2e2e;
   border-radius: 83px;
   border: 1px solid #000;
+  transition: 0.1s;
 }
 .volunteers__but:hover {
   transform: none;
 }
+.volunteers__but:active {
+  transform: scale(0.99);
+}
 .footer {
-  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #4b61f1;
+  max-width: 100%;
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 .footer__body {
-  width: 1440px;
+  max-width: 1440px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 30px;
+  padding: 40px;
 }
 .footer__top {
   display: flex;
@@ -998,4 +1047,504 @@ body {
   font-size: 20px;
   line-height: 100%;
   color: #fffef7;
+}
+@media (max-width: 1024px) {
+  .body__container {
+    max-width: 100%;
+  }
+  .header__body {
+    width: 964px;
+    margin-top: 25px;
+  }
+  .header__logo {
+    display: none;
+  }
+  .header__logo-adaptive {
+    display: block;
+    width: 94.86px;
+  }
+  .burger {
+    display: flex;
+  }
+  .header__wrapper {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 50;
+    overflow-y: auto;
+    background: rgba(75, 97, 241, 1);
+    animation: burgerAnimation 0.4s;
+  }
+  .header__contact p {
+    display: none;
+  }
+  .header__contact svg {
+    position: absolute;
+    transform: scale(1.65);
+    top: 30px;
+    left: 20px;
+  }
+  .language-dropdown {
+    display: none;
+    position: absolute;
+    top: 25px;
+    left: 66px;
+  }
+
+  @keyframes burgerAnimation {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  .main__block-1 {
+    width: 964px;
+    margin-bottom: 80px;
+  }
+  .block-1__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 70px;
+    line-height: 100%;
+    text-align: center;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .block-1__paragraph {
+    width: 344px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    text-align: center;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+    margin: 20px 0 30px 0;
+  }
+  .block-1__circle {
+    width: 140px;
+    height: 140px;
+  }
+  .main__block-2 {
+    width: 964px;
+  }
+  .block-2__content {
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .content__text {
+    margin-top: 20px;
+  }
+  .slider__wrapper {
+    gap: 10px;
+  }
+  .slider__img {
+    width: 355px;
+    height: 355px;
+  }
+  @keyframes slide {
+    0% {
+      transform: translateZ(0);
+    }
+    100% {
+      transform: translate3d(-365px, 0, 0);
+    }
+  }
+  .main__block-3 {
+    width: 964px;
+  }
+  .block-3__title {
+    margin: 0;
+  }
+  .block-3__content {
+    height: 934px;
+  }
+  .volunteers {
+    top: 87px;
+    left: 45px;
+  }
+  .participants {
+    top: 44px;
+    left: 610px;
+  }
+  .successful-projects-1 {
+    top: 585px;
+    left: 0;
+  }
+  .successful-projects-2 {
+    top: 454px;
+    left: 469px;
+  }
+  .block__video {
+    width: 964px;
+    margin: 80px 0;
+  }
+  .video {
+    width: 964px;
+    height: 600px;
+  }
+  .block__projects {
+    width: 964px;
+  }
+  .project__content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .project__text {
+    margin-top: 20px;
+  }
+  .project__slider {
+    margin-top: 30px;
+  }
+  .slider__cards {
+    width: 964px;
+  }
+  .block__social {
+    width: 964px;
+    margin-top: 0;
+  }
+  .social__media {
+    margin-left: 80px;
+  }
+  .block__volunteers {
+    width: 964px;
+  }
+  .volunteers__but {
+    width: 964px;
+  }
+  .footer__body {
+    max-width: 1024px;
+    padding: 30px;
+    gap: 30px;
+  }
+  .footer__sitemap {
+    margin-right: 240px;
+    margin-left: 206px;
+  }
+  .footer__bot {
+    align-items: flex-start;
+  }
+  .bot__txt {
+    width: 59px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+  }
+  .bot__2024 {
+  }
+  .bot__design {
+    margin: 0;
+  }
+  .footer__bot .language-dropdown {
+    display: block;
+    position: inherit;
+    margin-left: 276px;
+    margin-right: 330px;
+  }
+}
+@media (max-width: 375px) {
+  .body__container {
+    max-width: 100%;
+  }
+  .header__body {
+    width: 355px;
+    border-radius: 20px;
+    margin-top: 16px;
+  }
+  .header__body svg {
+    width: 47px;
+    height: 40px;
+  }
+  .main__block-1 {
+    width: 355px;
+    margin-bottom: 60px;
+  }
+  .block-1__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 60px;
+    line-height: 100%;
+    text-align: center;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .block-1__paragraph {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    text-align: center;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+    margin: 20px 0;
+  }
+  .main__block-2 {
+    width: 355px;
+  }
+  .content__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .content__text {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+    width: auto;
+    margin: 0;
+  }
+  .content__text p {
+    margin: 20px 0;
+  }
+  .content__text button {
+    margin: 0;
+  }
+  .main__block-3 {
+    width: 355px;
+    margin-top: 60px;
+  }
+  .block-3__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .block-3__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  .volunteers,
+  .participants,
+  .successful-projects-1,
+  .successful-projects-2 {
+    width: 100%;
+    height: 250px;
+    position: inherit;
+    top: 0;
+    left: 0;
+    border-radius: 135px;
+    gap: 10px;
+  }
+  .blue__txt {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 100px;
+    line-height: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #4b61f1;
+  }
+  .block__video {
+    width: 355px;
+    margin: 60px 0;
+  }
+  .video__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+    margin-bottom: 20px;
+  }
+  .video {
+    width: 100%;
+    height: 500px;
+  }
+  .block__projects {
+    width: 355px;
+    margin-bottom: 60px;
+  }
+  .project__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .project__text {
+    width: auto;
+  }
+  .project__text p {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+  }
+  .slider__buttons {
+    display: none;
+  }
+  .slider__cards {
+    width: 355px;
+  }
+  .slider__card {
+    width: 355px;
+  }
+  .card__img {
+    width: 315px;
+    height: 313px;
+  }
+  .card__info {
+    width: auto;
+    gap: 5px;
+  }
+  .slider__profile {
+    width: 355px;
+  }
+  .card__about {
+    width: 100%;
+    align-items: flex-start;
+  }
+  .card__about svg {
+    margin-top: 20px;
+  }
+  .profile__user {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 100%;
+    letter-spacing: -0.03em;
+    color: #2e2e2e;
+  }
+  .block__social {
+    width: 355px;
+    gap: 0;
+    margin-bottom: 60px;
+  }
+  .social__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .social__media {
+    margin: 0;
+    height: 432px;
+    width: 100%;
+  }
+  .facebook {
+    left: 0;
+    top: 50px;
+  }
+  .telegram {
+    left: 0;
+    top: 212px;
+  }
+  .instagram {
+    left: auto;
+    right: 0;
+    top: 130px;
+  }
+  .linkedin {
+    right: 0;
+  }
+  .block__volunteers {
+    width: 355px;
+    gap: 20px;
+    margin-bottom: 60px;
+  }
+  .volunteers__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .volunteers__but {
+    width: 100%;
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 30px;
+    line-height: 43px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .footer__body {
+    max-width: 375px;
+    padding: 20px 10px;
+    gap: 40px;
+  }
+  .footer__top {
+  }
+  .footer__top .language-dropdown {
+    display: block;
+    position: inherit;
+    margin-left: 166px;
+    margin-right: 0;
+  }
+  .footer__mid {
+    display: flex;
+    align-items: flex-start;
+  }
+  .footer__sitemap {
+    margin: 0 123px 0 0;
+  }
+  .footer__bot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+  }
+  .bot__txt {
+    flex-direction: row;
+    align-items: center;
+    width: auto;
+    gap: 251px;
+  }
+  .bot__2024 {
+    white-space: nowrap;
+  }
 }
