--- a/Main/style.css
+++ b/Main/style.css
@@ -210,6 +210,7 @@ body {
 }
 .open {
   display: flex !important;
+  overflow: hidden;
 }
 .burger {
   display: none;
@@ -796,7 +797,8 @@ body {
   cursor: pointer;
 }
 .facebook:hover {
-  background: rgba(75, 97, 241, 1);
+  background: rgba(65, 92, 160, 1);
+
   transform: scale(0.95) rotate(-15deg);
 }
 .facebook:hover svg {
@@ -1069,8 +1071,9 @@ body {
   .header__wrapper {
     display: none;
     flex-direction: column;
+    align-items: flex-start;
     position: fixed;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     top: 0;
     bottom: 0;
@@ -1084,17 +1087,33 @@ body {
   .header__contact p {
     display: none;
   }
-  .header__contact svg {
+  .header__contact {
     position: absolute;
-    transform: scale(1.65);
-    top: 30px;
-    left: 20px;
+    gap: 16px;
+    width: auto;
+    margin: 0;
+    top: 45px;
+    left: 50px;
   }
-  .language-dropdown {
-    display: none;
-    position: absolute;
-    top: 25px;
-    left: 66px;
+  .header__nav {
+    margin: 0 auto;
+    flex-direction: column;
+    gap: 16px;
+    width: auto;
+    margin-bottom: 106px;
+  }
+  .nav__link {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #fffef7;
+  }
+  .bot__group {
+    margin: 0 auto;
   }
 
   @keyframes burgerAnimation {
@@ -1265,9 +1284,8 @@ body {
     border-radius: 20px;
     margin-top: 16px;
   }
-  .header__body svg {
-    width: 47px;
-    height: 40px;
+  .header__nav {
+    margin-bottom: 137px;
   }
   .main__block-1 {
     width: 355px;
@@ -1546,5 +1564,19 @@ body {
   }
   .bot__2024 {
     white-space: nowrap;
+  }
+  .header__contact {
+    left: 30px;
+    top: 36px;
+  }
+  .nav__link {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #fffef7;
   }
 }
