--- a/Contact Us/style.css
+++ b/Contact Us/style.css
@@ -1,221 +1,269 @@
+.body__container {
+  align-items: center;
+  justify-content: center;
+}
+.contact__us {
+  max-width: 1360px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 80px 0 120px 0;
+}
+.contact__us-title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 120px;
+  line-height: 100%;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+}
+.contact__us-p {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #2e2e2e;
+  margin: 20px 0 40px 0;
+  width: 670px;
+}
+.contact__us-form {
+  max-width: 100%;
+  background: rgba(255, 238, 88, 1);
+  border-radius: 30px;
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 40px;
+}
+.form__title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 70px;
+  line-height: 100%;
+  text-align: center;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+  margin-bottom: 75px;
+}
+.form__inputs-top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 45px;
+}
+.name__input,
+.email__input {
+  width: 630px;
+  background-color: transparent;
+  border-bottom: 1px solid #000;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+  opacity: 1;
+}
+.name__input::placeholder,
+.email__input::placeholder,
+.mid__input::placeholder {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+  opacity: 0.6;
+}
+.mid__input {
+  width: 1280px;
+  background-color: transparent;
+  border-bottom: 1px solid #000;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+  opacity: 1;
+}
+.form__bot {
+  width: 1280px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 45px;
+}
+.form__confirm {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.form__confirm p {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #2e2e2e;
+}
+.confirm__checkbox {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #000;
+  border-radius: 100%;
+  background-color: transparent;
+}
+.form__but {
+  width: 183px;
+  height: 54px;
+  background: transparent;
+  border: 1px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #2e2e2e;
+  border-radius: 30px;
+}
 
-@font-face {
-    font-family: 'NourdRegular';
-    src: url('path-to-your-font/Nourd-Regular.ttf') format('truetype');
-    font-weight: normal;
+.custom-checkbox {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-checkbox input {
+  display: none; /* Приховуємо стандартний чекбокс */
+}
+
+.custom-checkbox span {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  border: 2px solid #000;
+  border-radius: 100%;
+  background-color: transparent;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease,
+    transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Стан, коли чекбокс активний */
+.custom-checkbox input:checked + span {
+  background-color: #000;
+  border-color: #000;
+}
+@media (max-width: 1024px) {
+  .contact__us {
+    max-width: 964px;
+    margin: 60px 0 80px 0;
+  }
+  .form__title {
+    font-family: "Lubalin Graph";
     font-style: normal;
-  }
-  
-  body {
-    font-family: 'NourdRegular', sans-serif;
-  }
-
-
-
-.big_text {
+    font-weight: 5;
     font-size: 60px;
-    margin-bottom: -20px;
-    margin-left: 2%;
-    font-weight: bold;
+    line-height: 100%;
+    text-align: center;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
   }
-  
-  .small_text {
-    width: 60%;
-    margin-left: 2%;
-    font-size: 26px;
-    line-height: 1.4;
+  .mid__input {
+    width: 884px;
   }
-
-
-
-
-
-.form_contact_us form {
-    display: flex;
+  .name__input {
+    width: 268px;
+  }
+  .email__input {
+    width: 596px;
+  }
+  .form__bot {
     flex-direction: column;
-    align-items: left;
-    background: rgba(255, 238, 88, 1);
-    padding: 20px;
-    border-radius: 20px;
-}
-
-.name_and_email{
-    display: flex;
-    flex-direction: row;
-    align-items: left;
-}
-
-.form_contact_us h1 {
-    font-size: 24px;
-    color: #444;
-    margin-bottom: 15px;
-}
-.form_contact_us form h1 {
-    font-size: 36px;
-}
-/* Стиль для поля имени и фамилии */
-.form_contact_us input[id="name"] {
-    width: 80%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid rgba(255, 238, 88, 1);
-    border-bottom: 1px solid rgb(106, 106, 106);
-    background-color: rgba(255, 238, 88, 1);
-    color: black;
-    border-radius: 4px;
-    font-size: 16px;
-    transition: border-color 0.3s;
-}
-
-/* Стиль для поля email */
-.form_contact_us input[type="email"] {
-    width: 80%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid rgba(255, 238, 88, 1);
-    border-bottom: 1px solid rgb(106, 106, 106);
-    background-color: rgba(255, 238, 88, 1);
-    color: black;
-    border-radius: 4px;
-    font-size: 16px;
-
-    transition: border-color 0.3s;
-    margin-left: 10px;
-}
-
-/* Стиль для поля сообщения */
-.form_contact_us input[id="Yourmessage"] {
-    width: 98%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid rgba(255, 238, 88, 1);
-    border-bottom: 1px solid rgb(106, 106, 106);
-    background-color: rgba(255, 238, 88, 1);
-    color: black;
-    border-radius: 4px;
-    font-size: 16px;
-    color: #333;
-    transition: border-color 0.3s;
-
-}
-
-/* Эффект при фокусе для всех полей */
-.form_contact_us input:focus {
-    border-color: #007bff;
-    outline: none;
-}
-
-.form_contact_us input[type="text"]:focus,
-.form_contact_us input[type="email"]:focus,
-.form_contact_us input[type="Yourmessage"]:focus {
-    border-color: #007bff;
-    outline: none;
-}
-
-.form_contact_us input[type="submit"] {
-    width: 50%;
-    padding: 10px;
-    background-color:  rgba(255, 238, 88, 1);
-    border: 1px solid black;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
-
-.form_contact_us input[type="submit"]:hover {
-    background-color: rgb(234, 166, 21);
-}
-
-.terms_and_conditions{
-    display: flex;
-    justify-content: space-around;
-}
-
-.terms_agreement {
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-    font-size: 14px;
-    color: #555;
-}
-
-.terms_agreement input[type="checkbox"] {
-    margin-right: 10px;
-    transform: scale(1.2);
-    cursor: pointer;
-}
-
-.form_contact_us input[type="submit"] {
-    width: 25%;
-    padding: 10px;
-    background-color:  rgba(255, 238, 88, 1);
-    border: 1px solid black;
-    color: #989898;
-    border-radius: 4px;
-    cursor: not-allowed; /* Отключено по умолчанию */
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
-
-.form_contact_us input[type="submit"]:enabled {
-    cursor: pointer;
-    background-color: rgb(255, 188, 44);
-    color: #333;
-    
-}
-
-.form_contact_us input[type="submit"]:hover:enabled {
-    background-color: rgb(234, 166, 21);
-}
-
-
-.terms {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    color: #333;
-}
-
-/* Стили для круглого черного чекбокса */
-.terms input[type="checkbox"] {
-    -webkit-appearance: none; /* Отключает стандартный стиль чекбокса */
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #000;
-    border-radius: 50%; /* Делаем чекбокс кругом */
-    cursor: pointer;
-    position: relative;
-    margin-right: 10px;
-    transition: background-color 0.3s, border-color 0.3s;
-}
-
-.terms input[type="checkbox"]:checked {
-    background-color: #000; /* Черный цвет для отмеченного состояния */
-    border-color: #000;
-}
-
-.terms input[type="checkbox"]:checked::before {
-    content: "";
-    position: absolute;
-    top: 3px;
-    left: 3px;
-    width: 10px;
-    height: 10px;
-    background-color: white; /* Внутренний белый кружок */
-    border-radius: 50%;
-}
-
-
-@media only screen and (max-width: 600px) {
-    .small_text {
-        width: 90%;
-        margin-left: 2%;
-        font-size: 26px;
-        line-height: 1.4;
-      }
+    align-items: flex-start;
+    width: 271px;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 39px;
   }
-
+  .form__title {
+    margin-bottom: 85px;
+  }
+}
+@media (max-width: 375px) {
+  .contact__us {
+    max-width: 355px;
+    margin: 40px 0 60px 0;
+  }
+  .contact__us-title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 60px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .contact__us-p {
+    width: 100%;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+    margin: 18px 0 30px 0;
+  }
+  .contact__us-form {
+    padding: 20px;
+  }
+  .form__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+    text-align: left;
+    margin-bottom: 20px;
+  }
+  .form__inputs-top {
+    flex-direction: column;
+    max-width: 100%;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+  .form__inputs-top input {
+    width: 100%;
+  }
+  .form__bot {
+    margin: 0;
+  }
+}
