--- a/Projects/style.css
+++ b/Projects/style.css
@@ -1,459 +1,117 @@
-@font-face {
-    font-family: 'NourdRegular';
-    src: url('path-to-your-font/Nourd-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+.body__container {
+  align-items: center;
+  justify-content: center;
+}
+
+.main__projects {
+  max-width: 1360px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 40px;
+  margin: 80px 0 120px 0;
+}
+.project__content {
+  width: 670px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+}
+.content__title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 120px;
+  line-height: 100%;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+  width: auto;
+}
+.content__paragraph {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #2e2e2e;
+}
+.projects__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.slider__card {
+}
+.card__img {
+}
+.card__info {
+}
+@media (max-width: 1024px) {
+  .project__content {
+    width: 656px;
+    margin: 60px 0 80px 0;
   }
-  
-  body {
-    font-family: 'NourdRegular', sans-serif;
+  .main__projects {
+    max-width: 964px;
+    gap: 30px;
   }
-
-.big_text {
-    font-size: 7vh;
-    margin-bottom: -20px;
-    margin-left: 10%;
-    font-weight: bold;
-}
-
-.small_text {
-    width: 670px;
-    font-size: 2vh;
-    margin-left: 10%;
-    line-height: 1.4;
-}
-
-.container_of_container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    width: 100%;
-    overflow: hidden;
-
-}
-
-.container_of_projects {
-    display: flex;
-    flex-wrap: wrap;
-    width: 60%;
-    justify-content: center;
-    margin-top: 20px;
-    gap: 20px;
-}
-
-.project_card {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 10px;
+  .slider__card {
+    width: 308px;
     border-radius: 20px;
-    border: 1px solid black;
-    transition: 0.3s ease;
-    text-align: left;
-}
-
-.project_card .name p {
-    font-size: 3vh;
-}
-
-.project_card .time p {
-    margin-top: -20px;
-    font-size: 2vh;
-}
-
-.project_card:hover {
-    background: #4B61F1;
-    border: 0px;
-    color: white;
-}
-
-.project_card:hover .time p {
-    opacity: 0.7;
-}
-
-.photo_card {
-    border-radius: 10px;
-    overflow: hidden;
-    width: 100%;
-    height: auto;
-}
-
-.photo_card img {
-    width: 100%;
-    height: auto;
-}
-@media (max-width: 768px) {
-    .container_of_container {
-        flex-direction: column;
-        align-items: center;
+  }
+  .card__img {
+    width: 268px;
+    height: 268px;
+    border-radius: 20px;
+  }
+  .card__info {
+    width: auto;
+  }
+  @media (max-width: 375px) {
+    .main__projects {
+      max-width: 355px;
+      margin: 40px 0 60px 0;
     }
-    .container_of_projects {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
+    .project__content {
+      width: 100%;
+      margin: 0;
+      gap: 20px;
     }
-    .project_card {
-        width: 90%; /* Adjust width for mobile view */
+    .content__title {
+      font-family: "Lubalin Graph";
+      font-style: normal;
+      font-weight: 5;
+      font-size: 60px;
+      line-height: 100%;
+      letter-spacing: -0.05em;
+      text-transform: uppercase;
+      color: #2e2e2e;
     }
-}
-
-
-.head_part{
-    margin:20px;
-}
-
-.nav-link {
-    display: block;
-    padding: .5rem 1rem;
-    color: #ffffff;
-}
-
-.navbar {
-    background-color: rgb(76, 76, 245);
-    color: white;
-    border-radius: 50px;
-    display: flex;
-    flex-direction: row;
-}
-
-.nav .nav-item {
-    position: relative;
-    cursor: pointer;
-    font-size: 22px;
-    text-decoration: none;
-    color: white;
-}
-
-.nav .nav-item:after {
-    display: block;
-    position: absolute;
-    right: 0;
-    bottom: -0.5px;
-    width: 0;
-    height: 2px;
-    background-color: white;
-    content: "";
-    transition: width 0.5s;
-}
-
-.nav .nav-item:hover:after {
-    width: 100%;
-    left: 0;
-    height: 2px;
-    background-color: white;
-    content: "";
-    transition: width 0.5s;
-}
-
-.nav-link {
-    color: white;
-}
-
-.nav-link:hover {
-    color: white;
-}
-
-.navbar-brand p {
-    margin-top: -14px;
-    font-size: 18px;
-    color: white;
-}
-
-.navbar-brand img {
-    width: 60px;
-    height: auto;
-}
-
-.container-fluid{
-    display: flex;
-    flex-direction: row;
-}
-.navbar-brand-2 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-}
-.navbar-brand-2 svg {
-    display: inline-block;
-    vertical-align: middle;
-    width: 20px;
-    height: 20px;
-}
-
-.navbar-brand-2 p {
-    margin: 0;
-    vertical-align: middle;
-    color: white;
-    margin-right: 40px;
-}
-
-.links_to_sites {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    height: 100%;
-    padding: 15px;
-    gap: 5px;
-}
-
-.lead {
-    width: 60%;
-    margin-left: 20%;
-}
-
-.language {
-  display: flex;
-  gap: 10px;
-  margin-right: 30px;
-  font-size: 2vh;    
-}
-  
-.language-btn {
-  padding: 10px 20px;
-  background-color: rgb(255, 255, 255);
-  color: #000000;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
-}
-  
-.language-btn:hover {
-  color: white;
-  border: 0px;
-  background-color: rgb(65, 65, 206);
-}
-
-
-
-
-.head_part{
-    margin:20px;
-}
-
-.nav-link {
-    display: block;
-    padding: .5rem 1rem;
-    color: #ffffff;
-}
-
-.navbar {
-    background-color: rgb(76, 76, 245);
-    color: white;
-    border-radius: 50px;
-    display: flex;
-    flex-direction: row;
-}
-
-.nav .nav-item {
-    position: relative;
-    cursor: pointer;
-    font-size: 22px;
-    text-decoration: none;
-    color: white;
-}
-
-.nav .nav-item:after {
-    display: block;
-    position: absolute;
-    right: 0;
-    bottom: -0.5px;
-    width: 0;
-    height: 2px;
-    background-color: white;
-    content: "";
-    transition: width 0.5s;
-}
-
-.nav .nav-item:hover:after {
-    width: 100%;
-    left: 0;
-    height: 2px;
-    background-color: white;
-    content: "";
-    transition: width 0.5s;
-}
-
-.nav-link {
-    color: white;
-}
-
-.nav-link:hover {
-    color: white;
-}
-
-.navbar-brand p {
-    margin-top: -14px;
-    font-size: 18px;
-    color: white;
-}
-
-.navbar-brand img {
-    width: 60px;
-    height: auto;
-}
-
-.container-fluid{
-    display: flex;
-    flex-direction: row;
-}
-.navbar-brand-2 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-}
-.navbar-brand-2 svg {
-    display: inline-block;
-    vertical-align: middle;
-    width: 20px;
-    height: 20px;
-}
-
-.navbar-brand-2 p {
-    margin: 0;
-    vertical-align: middle;
-    color: white;
-    margin-right: 40px;
-}
-
-.links_to_sites {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    height: 100%;
-    padding: 15px;
-    gap: 5px;
-}
-
-.lead {
-    width: 60%;
-    margin-left: 20%;
-}
-
-.language {
-  display: flex;
-  gap: 10px;
-  margin-right: 30px;
-  font-size: 2vh;    
-}
-  
-.language-btn {
-  padding: 10px 20px;
-  background-color: rgb(255, 255, 255);
-  color: #000000;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
-}
-  
-.language-btn:hover {
-  color: white;
-  border: 0px;
-  background-color: rgb(65, 65, 206);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.footer_part {
-    height: 334px;
-    width: 100%;
-    background: rgba(75, 97, 241, 1);
-    border-radius: 30px 30px 0 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    padding: 15px;
-    gap: 5px;
+    .content__paragraph {
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 120%;
+      letter-spacing: -0.05em;
+      color: #2e2e2e;
+    }
+    .slider__card {
+      width: 355px;
+    }
+    .card__img {
+      height: 315px;
+      width: 315px;
+    }
+    .projects__cards {
+      gap: 10px;
+    }
   }
-  
-  .item {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: space-between;
-    height: 100%;
-    padding: 15px;
-    gap: 5px;
-    color: #f0f0f0;
-  }
-  
-  .year_footer {
-    margin-left: 4%;
-  }
-  
-  .logo_footer {
-    width: 20%;
-    height: auto;
-  }
-  .language_2 {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-right: 30px;
-    font-size: 2vh;    
-  }
-  
-  @media (max-width:1160px){
-    .logo_footer {
-        width: 40%;
-        height: auto;
-      }
-  }
-
-  @media (max-width:730px){
-    .logo_footer {
-        width: 90%;
-        height: auto;
-      }
-  }
-
-  .communication {
-    width: 60px;
-    height: 60px;
-    border: 1px solid rgb(255, 255, 255);
-    color: white;
-    text-align: center;
-    align-content: center;
-    border-radius: 100px;
-    font-size: 28px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.3s ease;
-    text-decoration: none;
-  }
-
-
-  .communication:hover{
-    transform: scale(1.1);
-    background-color: white;
-    color: rgba(75, 97, 241, 1);
-  }
-
+}
