--- a/History/style.css
+++ b/History/style.css
@@ -1,108 +1,277 @@
-@font-face {
-    font-family: 'NourdRegular';
-    src: url('path-to-your-font/Nourd-Regular.ttf') format('truetype');
-    font-weight: normal;
+.our-history {
+  max-width: 1360px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  margin: 80px 0 100px 0;
+}
+.our-history__title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 120px;
+  line-height: 100%;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+}
+.our-history__subtitle {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 70px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+  margin: 80px 0 40px 0;
+}
+.our-history__subtitle span {
+  color: rgba(75, 97, 241, 1);
+}
+our-history__block {
+  display: none;
+}
+.our-history__block-1 {
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 80px;
+}
+.block-1__imgs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.block-1__img {
+  width: 325px;
+  height: 325px;
+  background: rgba(217, 217, 217, 1);
+  border-radius: 30px;
+}
+.block-1__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.content__txt-top {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+}
+.content__txt-bot {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px;
+}
+.content__txt-bot p {
+  width: 50%;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+}
+.our-history__block-2 {
+  max-width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px;
+}
+.block-2__title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 30px;
+  line-height: 110%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+}
+.block-2__title span {
+  color: rgba(75, 97, 241, 1);
+}
+.block-2__text {
+  max-width: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
+.block-2__text-top {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+}
+.block-2__text-mid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.block-2__text-mid p {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+}
+.block-2__text-bot {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+}
+@media (max-width: 1024px) {
+  .our-history {
+    max-width: 964px;
+    margin: 60px 0 90px 0;
+  }
+  .our-history__title {
+    font-family: "Lubalin Graph";
     font-style: normal;
+    font-weight: 5;
+    font-size: 70px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
   }
-  
-  body {
-    font-family: 'NourdRegular', sans-serif;
-    padding-left: 2%;
-    padding-right: 2%;
+  .our-history__subtitle {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 60px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+    margin: 30px 0 20px 0;
   }
-  img {
-    border-radius: 30px;
-  }
-
-.our_history p{
-    font-size: 12vh;
-    margin: 0;
-}
-
-
-
-
-
-.headline_part p{
-    font-size: 7vh;
-    max-width: 1200px;
-    margin-top: 40px;
-}
-
-.violet{
-    color: #4B61F1;
-    font-style: bold;
-}
-
-.first {
+  .our-history__block {
     display: flex;
-    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
     gap: 20px;
+  }
+  .block-1__imgs {
+    flex-direction: column;
+  }
+  .block-1__img {
+    width: 308px;
+    height: 308px;
+  }
+  .our-history__block-2 {
+    flex-direction: column;
+  }
+  .block-2__text {
+    max-width: 100%;
+  }
 }
-.small_photo {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    justify-content: center;
-}
-
-.small_photo img {
-    width: 30%; /* Set width relative to container */
-    aspect-ratio: 1/1; /* Maintain a 1:1 square aspect ratio */
-    object-fit: cover; /* Ensures images fill the square shape without distortion */
-    border-radius: 8px; /* Optional: adds rounded corners */
-
-}
-
-.text_first {
-    padding: 10px;
-    width: 40%;
-
-}
-
-.two_text_first{
-    display: flex;
-    flex-direction: row;
-}
-.second {
-    display: flex;
-    justify-content: flex-end;
-    padding: 40px 0;
-}
-
-.second img {
-    width: 40%;
-    aspect-ratio: 2 / 1;
-    object-fit: cover;
-    border-radius: 8px;
-}
-
-
-.third{
-    display: flex;
-    flex-direction: row;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-.continue{
-    font-size: 3vh;
-    width: 40%;
-    margin: 0;
-}
-
-.two_text_third{
-    display: flex;
-    flex-direction: row;
-}
-
-.text_third{
-    width: 40%;
-
-
-}
-
-.text_third p{
-    
+@media (max-width: 375px) {
+  .our-history {
+    max-width: 355px;
+    margin: 40px 0 60px 0;
+  }
+  .our-history__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 60px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .our-history__subtitle {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+    margin: 20px 0;
+  }
+  .our-history__block {
+    flex-direction: column;
+  }
+  .our-history__block-1 {
+    margin-bottom: 20px;
+  }
+  .content__txt-bot {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .content__txt-bot p {
+    width: 100%;
+  }
+  .block-1__imgs {
+    gap: 10px;
+    margin-bottom: 60px;
+  }
+  .block-1__img {
+    width: 100%;
+    height: 355px;
+  }
+  .block-2__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 24px;
+    line-height: 110%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .block-2__text-top {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+  }
+  .block-2__text {
+    gap: 5px;
+  }
+  .block-2__text-mid {
+    flex-direction: column;
+    gap: 5px;
+  }
+  .block-2__text-bot {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+  }
 }
