--- a/Main/style.css
+++ b/Main/style.css
@@ -256,9 +256,10 @@ body {
 .main-block {
   box-sizing: content-box;
   padding: 0 20px;
+  margin-top: 120px;
 }
 .page__main-block-1 {
-  padding-top: 20px;
+  margin-top: 20px;
 }
 .main__block-1 {
   display: flex;
@@ -330,7 +331,6 @@ body {
   }
 }
 .page__main-block-2 {
-  padding-top: 120px;
   overflow-x: hidden;
 }
 .main__block-2 {
@@ -414,7 +414,6 @@ body {
   }
 }
 .page__main-block-3 {
-  padding-top: 120px;
 }
 .main__block-3 {
   display: flex;
@@ -539,7 +538,6 @@ body {
   color: #4b61f1;
 }
 .page__block-video {
-  padding-top: 120px;
 }
 .block__video {
   display: flex;
@@ -572,7 +570,6 @@ body {
   border-radius: 30px;
 }
 .page__block-projects {
-  padding-top: 120px;
 }
 .block__projects {
   display: flex;
@@ -800,7 +797,6 @@ body {
   margin-top: 20px;
 }
 .page__block-social {
-  padding-top: 120px;
 }
 .block__social {
   display: flex;
@@ -926,7 +922,6 @@ body {
   fill: #fffef7;
 }
 .page__block-volunteers {
-  padding-top: 120px;
 }
 .block__volunteers {
   display: flex;
@@ -974,6 +969,7 @@ body {
 }
 .footer {
   background: #4b61f1;
+  margin-top: 120px;
 }
 .footer__body {
   display: flex;
@@ -1044,9 +1040,11 @@ body {
 }
 
 .footer__bot {
+  width: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  justify-content: space-between;
 }
 .bot__2024 {
   font-family: "Inter";
@@ -1063,10 +1061,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-
   color: #fffef7;
-  margin-left: 285px;
-  margin-right: 737px;
   cursor: pointer;
 }
 .bot__design:hover {
@@ -1140,6 +1135,9 @@ body {
 }
 @media (max-width: 1024px) {
   .body__container {
+  }
+  .main-block:not(:first-child) {
+    margin-top: 80px;
   }
   .header {
     max-width: 964px;
@@ -1231,6 +1229,8 @@ body {
       opacity: 1;
     }
   }
+  .page__main-block-1 {
+  }
   .main__block-1 {
     padding: 54px 154px;
   }
@@ -1262,7 +1262,6 @@ body {
     height: 140px;
   }
   .page__main-block-2 {
-    padding-top: 80px;
   }
   .main__block-2 {
   }
@@ -1290,6 +1289,7 @@ body {
     }
   }
   .page__main-block-3 {
+    margin-top: 118px;
   }
   .main__block-3 {
   }
@@ -1316,14 +1316,12 @@ body {
     left: 469px;
   }
   .page__block-video {
-    padding-top: 80px;
   }
   .block__video {
   }
   .video__container {
   }
   .page__block-projects {
-    padding-top: 80px;
   }
   .block__projects {
   }
@@ -1341,21 +1339,22 @@ body {
   .slider__cards {
   }
   .page__block-social {
-    padding-top: 80px;
   }
   .block__social {
   }
   .social__media {
   }
   .page__block-volunteers {
-    padding-top: 175px;
+    margin-top: 175px;
   }
   .block__volunteers {
   }
   .volunteers__but {
   }
+  .footer {
+    margin-top: 80px;
+  }
   .footer__body {
-    max-width: 1024px;
     padding: 30px;
     gap: 30px;
   }
@@ -1386,7 +1385,7 @@ body {
     margin-right: 330px;
   }
 }
-@media (max-width: 660px) {
+@media (max-width: 830px) {
   .social__media {
     max-width: 355px;
     height: 382px;
@@ -1445,9 +1444,9 @@ body {
   ._container {
   }
   .page__main-block-1 {
-    padding: 20px 10px 0 10px;
   }
-  .main-block {
+  .main-block:not(:first-child) {
+    margin-top: 60px;
   }
   .body__container {
   }
@@ -1488,7 +1487,6 @@ body {
     margin: 20px 0;
   }
   .page__main-block-2 {
-    padding: 60px 10px 0 10px;
   }
   .main__block-2 {
     padding: 0;
@@ -1522,7 +1520,6 @@ body {
     margin: 0;
   }
   .page__main-block-3 {
-    padding: 60px 10px 0px 10px;
   }
   .main__block-3 {
   }
@@ -1569,7 +1566,6 @@ body {
     color: #4b61f1;
   }
   .page__block-video {
-    padding: 60px 10px 0 10px;
   }
   .block__video {
   }
@@ -1587,7 +1583,6 @@ body {
   .video__container {
   }
   .page__block-projects {
-    padding: 60px 10px 0 10px;
   }
   .block__projects {
   }
@@ -1634,7 +1629,6 @@ body {
     color: #2e2e2e;
   }
   .page__block-social {
-    padding: 60px 10px 0 10px;
   }
   .block__social {
   }
@@ -1672,7 +1666,6 @@ body {
     color: #2e2e2e;
   }
   .page__block-volunteers {
-    padding: 60px 10px 0 10px;
   }
   .volunteers__but {
     font-family: "Lubalin Graph";
@@ -1684,8 +1677,10 @@ body {
     text-transform: uppercase;
     color: #2e2e2e;
   }
+  .footer {
+    margin-top: 60px;
+  }
   .footer__body {
-    max-width: 375px;
     padding: 20px 10px;
     gap: 40px;
   }
