--- a/Projects/style.css
+++ b/Projects/style.css
@@ -116,11 +116,14 @@
   }
 }
 @media (max-width: 517px) {
+  .projects__cards {
+  }
   .project__content {
     gap: 20px;
   }
   .main__projects {
     margin-top: 40px;
+    padding: 0 10px;
   }
   .content__title {
     font-family: "Lubalin Graph";
@@ -141,31 +144,6 @@
     letter-spacing: -0.02em;
     color: #2e2e2e;
   }
-  .projects__cards {
-    gap: 10px;
-  }
-}
-@media (max-width: 375px) {
-  .content__title {
-    font-family: "Lubalin Graph";
-    font-style: normal;
-    font-weight: 5;
-    font-size: 60px;
-    line-height: 100%;
-    letter-spacing: -0.05em;
-    text-transform: uppercase;
-    color: #2e2e2e;
-  }
-  .content__paragraph {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 120%;
-    letter-spacing: -0.05em;
-    color: #2e2e2e;
-  }
-
   .projects__cards {
     gap: 10px;
   }
