--- a/Team/style.css
+++ b/Team/style.css
@@ -1,186 +1,333 @@
-
-@font-face {
-  font-family: 'NourdRegular';
-  src: url('path-to-your-font/Nourd-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+.main-team {
+  margin-top: 80px;
+  padding: 0 20px;
 }
 
-body {
-  font-family: 'NourdRegular', sans-serif;
-}
-/* Main container for the card */
-.main_part {
+.team__block-1 {
+  max-width: 670px;
   display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-/* Our Founder card container */
-.our_founder {
-  display: flex;
-  flex-direction: row;
-  width: 99%;
-  overflow: hidden;
-  margin-left: 1vh;
-}
-
-/* Header styling */
-.header_founder p {
-  font-size: 72px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-
-
-/* Information container */
-.information_founder {
-  display: flex;
-  width: 100%;
-}
-
-/* Styling the image of the founder */
-.photo_founder {
-  flex: 0 0 40%;
-}
-.photo_founder img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  
-  border-radius: 10px;
-}
-
-/* Right section styling */
-.lotofinformation_founder {
-  padding-left: 2%;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-/* Founder name styling */
-.name_founder p {
-  font-size: 76px;
-  font-weight: bold;
-  color: #333;
-  margin: 0;
-}
-
-/* Description styling */
-.description_founder p {
-  font-size: 32px;
-  color: #555;
-  margin-top: 10px;
-  line-height: 1.6;
-}
-
-/* Social media icons section */
-.medias_founder {
-  margin-left: 2%;
-  display: flex;
-  gap: 2%;
-  margin-top: 20px;
-  justify-content: left;   
-
-}
-
-.medias_founder a{
-  transition: 0.3s ease;
-}
-
-.medias_founder svg {
-  width: 30px;
-  height: 30px;
-  fill: #333;
-  cursor: pointer;
-  transition: fill 0.3s;
-}
-
-
-
-.medias_founder a:hover{
-  
-  scale: 2;
-}
-.medias_founder svg:hover {
-  fill: #555;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-  .our_founder {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .information_founder{
-   
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-
-
-.all_volunteers {
-  display: flex;
-  flex-direction: column;
-
-}
-
-.team p {
-  font-size: 72px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  text-align: left;
-  margin-left: 1vh;
-}
-
-.team_volunteers_cards_container {
-  display: flex;
-  flex-wrap: wrap; /* Allows cards to wrap to the next line */
-  gap: 20px; /* Space between cards */
+  align-items: flex-start;
   justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+}
+.team__title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 120px;
+  line-height: 100%;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+}
+.team__paragraph {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #2e2e2e;
+}
+.team__block-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 37px;
+  margin-top: 80px;
+}
+.our__founder-title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 70px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+  max-width: 670px;
+}
+.our__founder-block {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.our__founder-img {
+  width: 100%;
+  position: relative;
+}
+
+.our__founder-content {
+  max-width: 670px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.content__subtitle {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #2e2e2e;
+}
+.content__paragraph {
+  margin: 18px 0 25px 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #2e2e2e;
+}
+.content__social-media {
+  width: 190px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
-
-.team_volunteers_cards {
+.team__block-3 {
   display: flex;
   flex-direction: column;
-  align-items: start;
-  
-  max-width: 200px;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 120px;
+}
+.all__team-title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 70px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: #2e2e2e;
+}
+.all__team-cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+}
+.card {
+  width: 325px;
   padding: 20px;
-  border-radius: 10px;
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  background-color: rgba(255, 254, 247, 1);
+  border: 1px solid #2e2e2e;
+  border-radius: 30px;
 }
-
-.photo_volunteer img {
+.card__img {
   width: 100%;
-  height: auto;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  object-fit: cover;
-
+  height: 250px;
 }
-
-.profession p {
-  font-size: 14px;
-  color: #777;
-  margin: 5px 0;
+.card__about {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 5px;
+  flex-direction: column;
+  width: auto;
+  border-top: none;
 }
-
-.name p {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 5px 0;
+.proffesion {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: -0.05em;
+  color: #4b61f1;
 }
+.about__name {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 100%;
+  letter-spacing: -0.03em;
+  color: #2e2e2e;
+}
+.card__projects {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.projects__list {
+  padding: 0;
+  margin: 0;
+}
+.card__project {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: -0.05em;
+  color: #2e2e2e;
+  opacity: 0.8;
+}
+@media (max-width: 1400px) {
+  .our__founder-img {
+    max-width: 403px;
+  }
+  .our__founder-block {
+    justify-content: flex-start;
+  }
+  .all__team-cards {
+    justify-content: center;
+  }
+}
+@media (max-width: 1024px) {
+  .main-team {
+    margin-top: 60px;
+  }
+  .team__block-2 {
+    margin-top: 49px;
+  }
+  .content__subtitle {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+  }
+  .content__paragraph {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+    margin: 20px 0 40px 0;
+  }
+  .team__block-2 {
+    gap: 30px;
+  }
+  .our__founder-block {
+    align-items: flex-start;
+  }
+  .our__founder-img {
+    width: 308px;
+    height: 400px;
+  }
+  .team__block-3 {
+    margin-top: 155px;
+  }
+}
+@media (max-width: 730px) {
+  .our__founder-block {
+    flex-direction: column;
+  }
+  .our__founder-img {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+  }
+}
+@media (max-width: 709px) {
+  .all__team-cards {
+    gap: 10px;
+  }
+  .card {
+    max-width: 355px;
+    width: 100%;
+    border-radius: 20px;
+  }
+}
+@media (max-width: 435px) {
+  .main-team {
+    margin-top: 40px;
+    padding: 0 10px;
+  }
+  .team__block-1 {
+    gap: 20px;
+  }
+  .team__title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 60px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .team__paragraph {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: -0.02em;
+    color: #2e2e2e;
+  }
+  .our__founder-title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .team__block-2 {
+    gap: 20px;
+    margin-top: 60px;
+  }
+  .content__subtitle {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+  }
+  .content__paragraph {
+    margin: 10px 0 20px 0;
 
-.projects p {
-  font-size: 14px;
-  color: #555;
-  margin-top: 10px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: -0.05em;
+    color: #2e2e2e;
+    opacity: 0.8;
+  }
+  .team__block-3 {
+    margin-top: 60px;
+  }
+  .all__team-title {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .team__block-3 {
+    gap: 20px;
+  }
 }
