--- a/About Us/style.css
+++ b/About Us/style.css
@@ -1,155 +1,54 @@
-
-@font-face {
-    font-family: 'NourdRegular';
-    src: url('path-to-your-font/Nourd-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  body {
-    font-family: 'NourdRegular', sans-serif;
-  }
-
-/* Layout for the About Us section */
-.about_us {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin: 20px;
-    margin-left: auto;
-    padding-left: 10%;
-    padding-bottom: 80px;
+.about__us {
+  margin-top: 80px;
+  padding: 0 20px;
 }
-
-
-.ABOUT_US{
-    font-size: 10vh;
+._container {
 }
-.description_about_us {
-    display: flex;
-    flex-direction: column;
-    max-width: 600px;
+.abouts__us-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.description_about_us p {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    text-align: left;
+.content__info {
+  max-width: 676px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 20px;
+  height: 580px;
+  position: relative;
 }
-
-.text_about_us p {
-    font-size: 24px;
-    line-height: 1.5;
-    margin-bottom: 0px; 
-    max-width: 670px;
-    margin-top: -85px;
+.about__us-title {
+  font-family: "Lubalin Graph";
+  font-style: normal;
+  font-weight: 5;
+  font-size: 120px;
+  line-height: 100%;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: #2e2e2e;
 }
-
-.bird_about_us
-{
-    width: 200px;
-    margin-left: 20%;
-    height: auto;
-    position: relative;
-    left: 8%;
-    top: 40px;
-    scale: 2;
+.about__us-paragraph {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #2e2e2e;
 }
-
- .about_us_location {
-    object-fit: cover;
-    width: 670px;
-    height: auto;
-    margin-left: 10%;
-    border-radius: 30px;
+.about__us-img {
+  width: 482px;
+  height: 405px;
+  position: absolute;
+  bottom: 0;
+  left: 14%;
 }
-
-/* Blue citation styling */
-.big_blue_citation {
-    width: 80%;
-    padding: 2%;
-    margin: 40px auto;
-    font-size: 8vh;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    background: rgba(75, 97, 241, 1);
-    border-radius: 20px;
-}
-
-/* Headline section */
-.headline {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around; 
-    gap: 20px;
-    align-items: center;
-    margin: 20px;
-    margin-top: 80px;
-    margin-bottom: 80px;
-}
-
-.headlibe_name p{
-    font-size: 12vh;
-    margin-top: -20px;
-    margin-bottom: -10px;
-}
-
-.birds {
-    display: flex;
-    gap: 10px;
-}
-
-.birds_guitar, .birds_dance {
-    margin-top: 20px;
-    margin-left: 7vh;
-    scale: 1.2;
-    width: 200px;
-    height: 200px;
-}
-
-.text_headline {
-    max-width: 600px;
-    line-height: 1.5;
-}
-
-/* Photo layout */
-.photos_about_us {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    width: 100%;
-    margin-top: 20px;
-}
-
-
-.description_text_headline{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around; 
-    color: #7f7e7e;
-}
-.photo_container {
-    display: flex;
-    width: 100%;
-    gap: 10px;
-    justify-content: center;
-}
-
-.photo_us_short {
-    width: 400px;
-    height: 400px;
-    object-fit: cover;
-    background-color: #ccc;
-    border-radius: 5px;
-
-}
-
-.photo_us {
-    width: 800px;
-    height: 400px;
-    background-color: #ccc;
-    border-radius: 5px;
+.content__img {
+  max-width: 670px;
+  width: 100%;
+  height: 580px;
+  background: #d9d9d9;
+  border-radius: 30px;
 }
