--- a/Team/style.css
+++ b/Team/style.css
@@ -181,6 +181,10 @@
   color: #2e2e2e;
   opacity: 0.8;
 }
+.block__volunteers {
+  margin-top: 120px;
+  padding: 0 20px;
+}
 @media (max-width: 1400px) {
   .our__founder-img {
     max-width: 403px;
@@ -230,6 +234,9 @@
   }
   .team__block-3 {
     margin-top: 155px;
+  }
+  .block__volunteers {
+    margin-top: 80px;
   }
 }
 @media (max-width: 730px) {
@@ -329,5 +336,9 @@
   }
   .team__block-3 {
     gap: 20px;
+  }
+  .block__volunteers {
+    margin-top: 60px;
+    padding: 0 10px;
   }
 }
